--- a/devfront/src/assets/css/App.css
+++ b/devfront/src/assets/css/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.masonry-root {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* align-content: center; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.masonry-cell {
+  margin: 4px;
+  width: 236px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 80px;
 }
